[tool.poetry]
name = "forecast_base"
version = "0.1.0"
description = "base forecasting dependency"
authors = ["Kyle Asano <kasano@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.1"
fbprophet = "^0.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
